Prepare the demo for vJUG